Bug 293178 - Crash on IMAP configured as disconnected
Summary: Crash on IMAP configured as disconnected
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: 4.8
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-02 23:50 UTC by Alex Fiestas
Modified: 2012-02-03 21:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fiestas 2012-02-02 23:50:39 UTC
Application: akonadi_imap_resource (4.8)
KDE Platform Version: 4.8.00 (4.8.0) (Compiled from sources)
Qt Version: 4.8.0
Operating System: Linux 3.2.2-1-ARCH x86_64

-- Information about the crash:
Nothing, I was developing in KDevelop and it crashes, I guess that it did because it was doing a check in the background but the only thing I can say for certain is that it happens every 20min and the check is every 5.

The crash can be reproduced some of the time.

-- Backtrace:
Application: UFO of type IMAP E-Mail Server (akonadi_imap_resource), signal: Segmentation fault
Using host libthread_db library "/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fc3ea138780 (LWP 5553))]

Thread 3 (Thread 0x7fc3d8062700 (LWP 4332)):
#0  0x00007fc3e5148883 in poll () from /lib/libc.so.6
#1  0x00007fc3e3ef7d58 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fc3e3ef8219 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007fc3e9558126 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007fc3e9527e52 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007fc3e95280a7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007fc3e9428d17 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007fc3e7f53949 in KIMAP::SessionThread::run (this=0x16c6670) at /home/afiestas/cod3s/cpp/kde/source/kdepimlibs/kimap/sessionthread.cpp:178
#8  0x00007fc3e942bd3b in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007fc3e919ae7a in start_thread () from /lib/libpthread.so.0
#10 0x00007fc3e5150b7d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fc3d7861700 (LWP 4334)):
#0  0x00007fc3e41abe86 in clock_gettime () from /lib/librt.so.1
#1  0x00007fc3e9482204 in ?? () from /usr/lib/libQtCore.so.4
#2  0x00007fc3e955888d in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007fc3e9558bc3 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007fc3e955760c in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007fc3e95576b5 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007fc3e3ef6de2 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#7  0x00007fc3e3ef7bed in ?? () from /usr/lib/libglib-2.0.so.0
#8  0x00007fc3e3ef8219 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#9  0x00007fc3e9558126 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0x00007fc3e9527e52 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0x00007fc3e95280a7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007fc3e9428d17 in QThread::exec() () from /usr/lib/libQtCore.so.4
#13 0x00007fc3e7f53949 in KIMAP::SessionThread::run (this=0x17f4da0) at /home/afiestas/cod3s/cpp/kde/source/kdepimlibs/kimap/sessionthread.cpp:178
#14 0x00007fc3e942bd3b in ?? () from /usr/lib/libQtCore.so.4
#15 0x00007fc3e919ae7a in start_thread () from /lib/libpthread.so.0
#16 0x00007fc3e5150b7d in clone () from /lib/libc.so.6
#17 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fc3ea138780 (LWP 5553)):
[KCrash Handler]
#6  Akonadi::ItemSync::setFullSyncItems (this=0x0, items=...) at /home/afiestas/cod3s/cpp/kde/source/kdepimlibs/akonadi/itemsync.cpp:145
#7  0x00007fc3e9c64b68 in Akonadi::ResourceBase::itemsRetrieved (this=<optimized out>, items=...) at /home/afiestas/cod3s/cpp/kde/source/kdepimlibs/akonadi/resourcebase.cpp:901
#8  0x0000000000454652 in RetrieveItemsTask::onHeadersReceived (this=0x1531320, mailBox=..., uids=..., sizes=..., flags=..., messages=...) at /home/afiestas/cod3s/cpp/kde/source/kdepim-runtime/resources/imap/retrieveitemstask.cpp:361
#9  0x00007fc3e953cf11 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#10 0x00007fc3e7f3d154 in KIMAP::FetchJob::headersReceived (this=<optimized out>, _t1=..., _t2=..., _t3=..., _t4=..., _t5=...) at /home/afiestas/cod3s/cpp/kde/build/kdepimlibs/kimap/fetchjob.moc:115
#11 0x00007fc3e7f3fb76 in emitPendings (this=0x17d2d90) at /home/afiestas/cod3s/cpp/kde/source/kdepimlibs/kimap/fetchjob.cpp:57
#12 KIMAP::FetchJob::handleResponse (this=0x16b27f0, response=...) at /home/afiestas/cod3s/cpp/kde/source/kdepimlibs/kimap/fetchjob.cpp:236
#13 0x00007fc3e7f51b6a in KIMAP::SessionPrivate::responseReceived (this=0x17b9430, response=...) at /home/afiestas/cod3s/cpp/kde/source/kdepimlibs/kimap/session.cpp:271
#14 0x00007fc3e95420d6 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#15 0x00007fc3e86988c4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#16 0x00007fc3e869d743 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#17 0x00007fc3e6558646 in KApplication::notify (this=0x7fff41ba9170, receiver=0x168b890, event=0x7fc3c801c060) at /home/afiestas/cod3s/cpp/kde/source/kdelibs/kdeui/kernel/kapplication.cpp:311
#18 0x00007fc3e952906c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#19 0x00007fc3e952c90a in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#20 0x00007fc3e9557c93 in ?? () from /usr/lib/libQtCore.so.4
#21 0x00007fc3e3ef784d in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#22 0x00007fc3e3ef8048 in ?? () from /usr/lib/libglib-2.0.so.0
#23 0x00007fc3e3ef8219 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#24 0x00007fc3e95580bf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#25 0x00007fc3e873bf1e in ?? () from /usr/lib/libQtGui.so.4
#26 0x00007fc3e9527e52 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#27 0x00007fc3e95280a7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#28 0x00007fc3e952cc05 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#29 0x00007fc3e9c625f6 in Akonadi::ResourceBase::init (r=0x15ae830) at /home/afiestas/cod3s/cpp/kde/source/kdepimlibs/akonadi/resourcebase.cpp:408
#30 0x000000000041c1c6 in Akonadi::ResourceBase::init<ImapResource> (argc=<optimized out>, argv=<optimized out>) at /home/afiestas/cod3s/cpp/kde/bin/include/akonadi/resourcebase.h:188
#31 0x00007fc3e508f38d in __libc_start_main () from /lib/libc.so.6
#32 0x0000000000416975 in _start ()

Possible duplicates by query: bug 292408, bug 292364, bug 292338, bug 291902, bug 289929.

Reported using DrKonqi
Comment 1 Allen Winter 2012-02-03 21:02:49 UTC
Git commit c525dafb3ede980a632f99d7a973347bd7f71d70 by Allen Winter.
Committed on 03/02/2012 at 22:01.
Pushed by winterz into branch 'master'.

in some cases the itemsyncer is turned-off, so check for that
in itemsRetrieved and other places. avoids crashes.
MERGE: 4.8
FIXED-IN: 4.8.1

M  +17   -7    akonadi/resourcebase.cpp

http://commits.kde.org/kdepimlibs/c525dafb3ede980a632f99d7a973347bd7f71d70
Comment 2 Allen Winter 2012-02-03 21:03:33 UTC
Git commit 79b58a70822c07a73b425404506f50fe98f02a13 by Allen Winter.
Committed on 03/02/2012 at 22:01.
Pushed by winterz into branch 'KDE/4.8'.

in some cases the itemsyncer is turned-off, so check for that
in itemsRetrieved and other places. avoids crashes.
MERGE: 4.8
FIXED-IN: 4.8.1
(cherry picked from commit c525dafb3ede980a632f99d7a973347bd7f71d70)

M  +17   -7    akonadi/resourcebase.cpp

http://commits.kde.org/kdepimlibs/79b58a70822c07a73b425404506f50fe98f02a13