in some cases the itemsyncer is turned-off, so check for that in itemsRetrieved and other places. avoids crashes.

BUG: 293178
MERGE: 4.8
FIXED-IN: 4.8.1